# Dudzian

./: .coveragerc  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  04_refactor_imports.py  05_apply_hotfixes.py  06_add_types_common.py  08_more_fixes.py  09_fix_escaped_quotes.py  10_fix_quote_edges.py  11_fix_walkforward_indent.py  12_fix_if_block.py  13_fix_unclosed_paren.py  14_fix_unexpected_indent_run_autotrade.py  15_fix_tradinggui_ctor.py  CONTRIBUTING.md  CryptoHunter.spec  GymOS.spec  README.md  add_event_and_logging_stubs.ps1  add_logging_utils_stub.ps1  ai_manager.py  apply_mypy_patch_set1.ps1  auto_trader.py  build_preview_exe_windows.bat  build_preview_exe_windows_DEBUG.bat  build_preview_exe_windows_DEBUG_v2.bat  config.toml  config_manager.py  data_preprocessor.py  database_manager.py  env.example  event_emitter_adapter.py  exchange_manager.py  fix-presets.patch  fix_logging_utils_indent.ps1  fix_logging_utils_syntax.ps1  fix_logging_utils_syntax_v2.ps1  fix_mypy_wave2.ps1  (+17 more)
KryptoLowca/: README.markdown  __init__.py  ai_manager.py  ai_models.py  alerts.py  auto_trader.py  config_manager.py  config_manager.py.bak  config_manager.py.bak_quotes  data_preprocessor.py  database_manager.py  emitter_adapter.py  event_emitter_adapter.py  event_emitter_adapter.pyi  exchange_adapter.py  exchange_manager.py  logging_utils.py  logging_utils.py.bak  logging_utils.py.bak2  logging_utils.py.bakIndent  logging_utils.pyi  paper_auto_trade_app.py  paper_exchange.py  pyproject.toml  quick_db_test.py  quick_exchange_adapter_test.py  quick_live_orders_test.py  quick_live_readonly_test.py  quick_paper_test.py  report_manager.py  reporting.py  requirements.txt  risk_management.py  risk_manager.py  risk_settings_loader.py  run_autotrade_paper.py  run_autotrade_paper.py.bak  run_autotrade_paper.py.bak_indent  run_trading_gui_live.py  run_trading_gui_paper.py  (+13 more)
KryptoLowca/auto_trader/: __init__.py  __main__.py  app.py  paper.py
KryptoLowca/backtest/: __init__.py  autotune.py  engine.py  metrics.py  mini_backtester.py  optimize.py  preset_store.py  preset_store.py.bak  report.py  reporting.py  runner.py  runner_preset.py  scan_signals.py  simulation.py  simulation.py.bak  simulation.py.bak_quotes  strategy_ma.py  walkforward_service.py  walkforward_service.py.bak  walkforward_service.py.bak_ifindent  walkforward_service.py.bak_indent
KryptoLowca/backups/: positions_paper.json
KryptoLowca/bot/: __init__.py  auto_trader.py  data_preprocessor.py  emitter_adapter.py  event_emitter_adapter.py  quick_db_test.py  quick_exchange_adapter_test.py  quick_live_orders_test.py  quick_live_readonly_test.py  quick_paper_test.py  risk_management.py  run_autotrade_paper.py  run_trading_gui_live.py  run_trading_gui_paper.py  trading_gui.py  trading_strategies.py  wfa_daemon.py
KryptoLowca/core/: order_executor.py  trading_engine.py
KryptoLowca/dashboard/: __init__.py  desktop.py
KryptoLowca/data/: __init__.py  market_data.py
KryptoLowca/docs/: FAQ.md  SECURITY.md  architecture.md  architecture_plan.md  deployment_guide.md
KryptoLowca/exchanges/: __init__.py  adapters.py  binance.py  bitstamp.py  bybit.py  interfaces.py  kraken.py  okx.py  polling.py  streaming.py  zonda.py  zonda.py.bak  zonda.py.bak2
KryptoLowca/interfaces/: __init__.py  api.py  desktop.py
KryptoLowca/managers/: __init__.py  ai_manager.pyi  config_manager.py  database_manager.py  database_manager.py.bak  database_manager.py.bak2  exchange_adapter.pyi  exchange_core.py  exchange_manager.py  live_exchange_ccxt.py  multi_account_manager.py  multi_account_manager.py.bak_paren  paper_exchange.py  report_manager.py  risk_manager_adapter.py  scanner.py  security_manager.py
KryptoLowca/runtime/: bootstrap.py
KryptoLowca/scripts/: healthcheck.py  load_test_signals.py  preset_editor_cli.py
KryptoLowca/security/: __init__.py  api_key_manager.py  key_rotation.py  secret_store.py  secret_store.py.bak
KryptoLowca/services/: alerting.py  atr_monitor.py  execution_service.py  indicators.py  marketdata.py  order_router.py  performance_monitor.py  persistence.py  position_sizer.py  risk_dashboard.py  risk_guard.py  risk_manager.py  stop_tp.py  strategy_engine.py  strategy_service.py  walkforward_service.py  wfo.py
KryptoLowca/strategies/: __init__.py  backtest.py  core.py  indicators.py  marketplace.py  rules_v0.py
KryptoLowca/telemetry/: __init__.py  prometheus_exporter.py
KryptoLowca/tests/: __init__.py  conftest.py  test_ai_manager.py  test_ai_pipeline.py  test_alerting.py  test_auto_trader.py  test_auto_trader_shim.py  test_backtest_simulation.py  test_config_manager.py  test_config_manager_versions.py  test_dashboard.py  test_database_manager.py  test_exchange_adapter_contracts.py  test_exchange_adapters.py  test_exchange_factory_registration.py  test_exchange_manager.py  test_exchange_protocols.py  test_execution_service.py  test_market_data_backtester.py  test_market_data_poller.py  test_marketplace_loader.py  test_order_executor.py  test_paper_trading_integration.py  test_preset_editor_cli.py  test_risk_dashboard.py  test_risk_management.py  test_risk_service.py  test_run_autotrade_paper.py  test_run_trading_gui_live.py  test_run_trading_gui_paper.py  test_run_trading_gui_paper_emitter.py  test_runtime_bootstrap.py  test_security_manager.py  test_security_rotation.py  test_strategy_marketplace.py  test_strategy_service.py  test_trading_controller.py  test_trading_engine.py  test_trading_engine.py.bak  test_trading_gui.py  (+5 more)
KryptoLowca/trading/: auto_trade_engine.py  auto_trade_engine.py.bak
KryptoLowca/trading_strategies/: __init__.py  engine.py  engine.py.bak
KryptoLowca/ui/: __init__.py
archive/legacy_bot/: README.markdown  __init__.py  _compat.py  ai_models.py  auto_trader.py  config.yaml  data_preprocessor.py  database_manager.py  emitter_adapter.py  event_emitter_adapter.py  pyproject.toml  quick_db_test.py  quick_exchange_adapter_test.py  quick_live_orders_test.py  quick_live_readonly_test.py  quick_paper_test.py  reporting.py  (+10 more)
ui/: CMakeLists.txt  README.md  README.windows-build.md  __init__.py
(+4331 files in other folders)
