[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "KryptoLowca",
  "archive",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true
namespace_packages = true
follow_imports = "silent"
files = [
  "bot_core/config/models.py",
]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
markers = [
  "timeout: oznaczenie testów z ograniczeniem czasu wykonywania",
  "integration: testy wymagające środowisk demo/sandbox lub zewnętrznych zasobów",
  "requires_trading_stubs: test wymaga wygenerowanych stubów trading_pb2",
  "e2e_demo_paper: scenariusz demo→paper wykonywany lokalnie",
  "e2e_retraining: scenariusz E2E walidujący retrening i fallback backendów",
  "asyncio: testy wykorzystujące pętlę asynchroniczną",
  "retraining: testy weryfikujące cykl retreningu i raporty",
  "smoke: szybkie testy dymne release candidate",
]

[project]
name = "dudzian-bot"
version = "0.1.0"
description = "Modułowy bot tradingowy"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Zespół Dudzian"}]
dependencies = [
  "pyarrow>=21.0.0",
  "protobuf>=4.24",
  "grpcio>=1.62",
  "PyYAML>=6.0",
  "cryptography>=42.0.0",
  "PyNaCl>=1.5.0",
  "pydantic>=2.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "scipy>=1.16",
  "lightgbm>=4.6",
  "requests>=2.31",
  "responses>=0.25",
  "httpx>=0.26",
  "anyio>=4.0",
  "respx>=0.20",
  "jsonschema>=4.21",
  "sqlalchemy>=2.0",
  "PySide6>=6.6",
  "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "grpcio-tools>=1.62",
  "grpcio>=1.62",
  "protobuf>=4.24",
  "PyYAML>=6.0",
  "cryptography>=42.0.0",
  "PyNaCl>=1.5.0",
  "pydantic>=2.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "scipy>=1.16",
  "lightgbm>=4.6",
  "requests>=2.31",
  "responses>=0.25",
  "httpx>=0.26",
  "respx>=0.20",
  "sqlalchemy>=2.0",
  "packaging>=23.2",
]
desktop = [
  "pyinstaller>=6.5",
  "briefcase>=0.3.18",
  "PySide6>=6.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "pathbootstrap",
  "probe",
  "probe_keyring",
  "pytest_cov_stub",
  "sitecustomize",
]

[tool.setuptools.packages.find]
include = ["bot_core*", "scripts*"]
