[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  "archive",
  "archive/**",
  "bot_core/generated",
  "bot_core/generated/**",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
show_error_codes = true
namespace_packages = true
follow_imports = "skip"
exclude = ["archive/.*"]
files = [
  "bot_core/auto_trader",
  "bot_core/ai",
  "bot_core/risk",
  "bot_core/execution",
  "bot_core/config",
  "core/config",
  "core/reporting",
  "core/security",
  "core/licensing",
  "ui",
  "deploy/packaging/desktop_installer.py",
  "deploy/packaging/build_core_bundle.py",
  "deploy/packaging/build_strategy_bundle.py",
  "scripts/run_ai_governor_cycle.py",
  "scripts/validate_marketplace_presets.py",
  "scripts/list_exchange_adapters.py",
  "scripts/validate_long_poll_snapshots.py",
  "scripts/run_local_bot.py",
  "scripts/run_cloud_service.py",
  "scripts/run_stage6_resilience_cycle.py",
  "scripts/run_stage6_observability_cycle.py",
  "reports",
]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "PySide6", 
  "PySide6.*",
  "shiboken6",
  "shiboken6.*",
  "pandas",
  "pandas.*",
  "fastapi",
  "fastapi.*",
  "jsonschema",
  "jsonschema.*",
  "grpc",
  "grpc.*",
  "joblib",
  "joblib.*",
  "shap",
  "shap.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "bot_core.auto_trader.*",
    "bot_core.ai.*",
    "bot_core.risk.*",
    "bot_core.execution",
    "bot_core.execution.*",
]
ignore_missing_imports = true
disable_error_code = [
  "attr-defined",
  "arg-type",
  "call-overload",
  "assignment",
  "index",
  "return-value",
  "no-any-return",
  "union-attr",
  "name-defined",
  "no-redef",
  "operator",
  "misc",
]

[[tool.mypy.overrides]]
module = ["ui.backend.*", "ui.pyside_app.*"]
disable_error_code = [
  "attr-defined",
  "arg-type",
  "return-value",
  "no-any-return",
  "assignment",
  "no-redef",
  "call-overload",
  "index",
]

[[tool.mypy.overrides]]
module = [
  "scripts.list_exchange_adapters",
  "scripts.validate_long_poll_snapshots",
  "scripts.run_ai_governor_cycle",
  "core.reporting.guardrails_reporter",
  "core.reporting.retraining_reporter",
  "ui.pyside_app.controllers.wizards",
]


[[tool.mypy.overrides]]
module = [
  "bot_core.ai.training",
  "bot_core.auto_trader.ai_governor",
  "bot_core.auto_trader.lifecycle",
  "scripts.validate_marketplace_presets",
]
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
module = ["bot_core.generated", "bot_core.generated.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
markers = [
  "timeout: oznaczenie testów z ograniczeniem czasu wykonywania",
  "integration: testy wymagające środowisk demo/sandbox lub zewnętrznych zasobów",
  "network: testy wymagające dostępu do sieci lub jawnej zgody",
  "requires_trading_stubs: test wymaga wygenerowanych stubów trading_pb2",
  "e2e_demo_paper: scenariusz demo→paper wykonywany lokalnie",
  "e2e_retraining: scenariusz E2E walidujący retrening i fallback backendów",
  "asyncio: testy wykorzystujące pętlę asynchroniczną",
  "retraining: testy weryfikujące cykl retreningu i raporty",
  "smoke: szybkie testy dymne release candidate",
  "qml: testy wymagające środowiska Qt/QML (PySide6)",
  "soak: długotrwałe scenariusze stabilności i anti-flap",
  "performance: benchmarki i testy SLA wydajnościowej",
  "long_poll: testy obejmujące lifecycle i teardown LocalLongPollStream",
]

[project]
name = "dudzian-bot"
version = "0.1.0"
description = "Modułowy bot tradingowy"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Zespół Dudzian"}]
dependencies = [
  "pyarrow>=21.0.0",
  "protobuf>=4.24,<6",
  "grpcio>=1.62,<2",
  "PyYAML>=6.0",
  "cryptography>=42.0.8,<46",
  "PyNaCl>=1.5.0,<2",
  "pydantic>=2.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "scipy>=1.16",
  "lightgbm>=4.6",
  "ccxt>=4.0.0,<5",
  "keyring>=24.3",
  "secretstorage>=3.3; platform_system == 'Linux'",
  "requests>=2.31",
  "responses>=0.25",
  "httpx>=0.26",
  "anyio>=4.0",
  "aiosqlite>=0.20",
  "respx>=0.20",
  "jsonschema>=4.21",
  "sqlalchemy[asyncio]>=2.0",
  "PySide6>=6.7,<6.11",
  "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.3",
  "pytest-xdist>=3.5",
  "grpcio-tools>=1.62,<2",
  "grpcio>=1.62,<2",
  "protobuf>=4.24,<6",
  "PyYAML>=6.0",
  "cryptography>=42.0.8,<46",
  "PyNaCl>=1.5.0,<2",
  "pydantic>=2.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "scipy>=1.16",
  "lightgbm>=4.6",
  "requests>=2.31",
  "responses>=0.25",
  "httpx>=0.26",
  "respx>=0.20",
  "sqlalchemy[asyncio]>=2.0",
  "packaging>=23.2",
  "types-requests>=2.31",
]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "grpcio-tools>=1.62,<2",
  "PyYAML>=6.0",
  "pyarrow>=12.0",
  "httpx>=0.26",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "pytest-timeout>=2.3",
]
tools = [
  # Dependencies for CI tooling/scripts (reports, marketplace, parity checks).
  "PyYAML>=6.0",
  "httpx>=0.26",
  "requests>=2.31",
  "cryptography>=42.0.8,<46",
  "PyNaCl>=1.5.0,<2",
  "packaging>=23.2",
  "pydantic>=2.5",
  "numpy>=1.26",
  "pandas>=2.2",
  "joblib>=1.3",
  "pyarrow>=12.0",
]
desktop = [
  "pyinstaller>=6.5",
  "briefcase>=0.3.18",
  "PySide6>=6.7,<6.11",
]
compression = [
  "brotli>=1.1; platform_python_implementation != 'PyPy'",
  "brotlicffi>=1.1.0; platform_python_implementation == 'PyPy'",
  "zstandard>=0.22",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "pathbootstrap",
  "probe",
  "probe_keyring",
  "pytest_cov_stub",
  "sitecustomize",
]

[tool.setuptools.packages.find]
include = ["bot_core*", "core*", "scripts*", "stage6_samples*"]

[tool.setuptools.package-data]
"bot_core.auto_trader" = ["py.typed"]
"bot_core.ai" = ["py.typed"]
"bot_core.ai._defaults" = ["risk_thresholds.yaml"]
"bot_core.risk" = ["py.typed"]
"bot_core.execution" = ["py.typed"]
"core" = ["py.typed"]
