[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptolowca"
version = "0.1.0"
description = "Trading bot (desktop) with exchange, AI, risk, reporting."
requires-python = ">=3.10"
authors = [{name = "Your Name"}]
license = { text = "Proprietary" }
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "ccxt>=4.0.0",
  "SQLAlchemy>=2.0",
  "aiosqlite>=0.19",
  "requests>=2.31",
  "fastapi>=0.110",
  "httpx>=0.27",
  "cryptography>=42.0",
  "pyyaml>=6.0",
  "reportlab>=4.0",
  "plotly>=5.20",
  "matplotlib>=3.8",
  "typer>=0.9",
  "prometheus-client>=0.20",
  "python-json-logger>=2.0",
]

[project.optional-dependencies]
ml = [
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "torch>=2.2",
  "vectorbt>=0.26",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "black>=24.3.0",
  "mypy>=1.8",
  "types-PyYAML>=6.0.12.12",
]
security = [
  "hvac>=2.1",
  "boto3>=1.34",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
